# AutoPCTool

./: LICENSE  README.md  package-lock.json  package.json
src/: main.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  scan.rs
src/components/: createScreenshot.vue  screenImage.vue
src/views/: home.vue  screenshot.vue
